<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="?attr/colorPrimary"
        app:titleTextColor="@color/white"
        app:title="@string/app_name"
        />

    <TextView
        android:id="@+id/nombreJugador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:text="@string/nombre_jugador"/>

    <TextView
        android:id="@+id/textoMovimientos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_below="@id/nombreJugador"
        android:text="@string/movimientos"
        />

    <TextView
        android:id="@+id/textoAciertos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_below="@+id/textoMovimientos"
        android:text="@string/aciertos"/>

    <TextView
        android:id="@+id/textoRestantes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_below="@+id/textoAciertos"
        android:text="@string/restantes"/>

    <Button
        android:id="@+id/reiniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reiniciar"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tablero"
        android:layout_marginTop="50dp"
        android:onClick="reiniciar"/>

<!--    <Button-->
<!--        android:id="@+id/btnAyuda"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Ayuda"-->
<!--        android:layout_below="@id/reiniciar"-->
<!--        android:layout_marginTop="15dp"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:onClick="abrirAyuda" />-->

    <GridLayout
        android:id="@+id/tablero"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_centerInParent="true">
    </GridLayout>
</RelativeLayout>